frontend: fix customlink checkbox wrap

--- a/src/frontend/src/component/form.scss
+++ b/src/frontend/src/component/form.scss
@@ -71,3 +71,6 @@ label.required:after {
 .clr-form {
   width: 100%;
 }
+.clr-checkbox-wrapper label{
+  white-space: nowrap;
+}
